# DevopsINT2025

./: AWS-INSPECTOR-SETUP.md  CI-CD-README.md  SERVER-NODEJS-CI-CD.md  mnist-predictor.yaml  names_demo.txt
.github/workflows/: aws-inspector-integration.yml  aws-inspector-sbom.yml  nexus-upload.yml  server-nodejs-ci-cd.yml
Nexus/: .pypirc  LICENSE  MANIFEST.in  README.md  build_and_upload.sh  install_from_nexus.sh  pip.conf  pip_global_path.md  pyproject.toml  requirements.txt  setup.py  upload_to_nexus.py
Nexus/.github/workflows/: nexus-upload.yml
Nexus/src/nexus_example_package/: __init__.py  hello.py
Nexus/src/nexus_example_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
course-site-with-nodejs-backend/server-nodejs/: Dockerfile
python_katas/kata_1/: answers.py  kata_questions_1.py  kata_test_1.py  questions.py  test.py
python_katas/kata_2/: kata_questions_2.py  kata_test_2.py  questions.py  test.py
python_katas/kata_3/: kata_questions_3.py  kata_test_3.py  questions.py  test.py  utils.py
